removing comments, fixing line break attribute

--- a/src/containers/location/Location.module.scss
+++ b/src/containers/location/Location.module.scss
@@ -52,5 +52,5 @@
   color: grey;
   text-decoration: underline;
   text-decoration-style: dotted;
-  white-space: 'pre-wrap';
+  white-space: pre-wrap;
 }
